package interfaces;

public interface BstPrototype {

    public BstPrototype getClone();
    
}